# constructionos

./: .gitignore  fix_later.md  handover.md.resolved  index.html  package-lock.json  package.json  tailwind.config.js  tauri_log.txt  tauri_log_2.txt  tsconfig.json
src/: App.css  App.tsx  index.css  pdfGenerator.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  check_error.txt  check_output.txt  tauri.conf.json
src-tauri/src/: lib.rs  model_manager.rs  schema.sql
src/components/: Dashboard.tsx  Settings.tsx  VoiceRecorder.tsx
src/components/layout/: Header.tsx  Layout.tsx  NavBar.tsx
src/components/ui/: ClientCard.tsx  DebugOverlay.tsx  DiagnosticButton.tsx  EmptyState.tsx  EventCard.tsx  InvoiceCard.tsx  InvoiceModal.tsx  TaskCard.tsx  ThinkingOverlay.tsx  Toast.tsx  VoiceOverlay.tsx
src/context/: AppContext.tsx
src/hooks/: useOfflineQueue.ts  useWavRecorder.ts
src/lib/: supabase.ts  tauri.ts
src/pages/: Calendar.tsx  Clients.tsx  Dashboard.tsx  Invoices.tsx  Settings.tsx  Tasks.tsx
src/services/: dataService.ts
verification/: verify_app.py
