[package]
name = "construction-os"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
base64 = "0.21"
ureq = { version = "2.9", features = ["json"] } 
chrono = { version = "0.4", features = ["serde"] }
opener = "0.8.3"
tokio = { version = "1", features = ["fs"] }
whisper-rs = { version = "0.13" }
cpal = "0.15"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
anyhow = "1.0"
tauri-plugin-fs = "2.0"
hound = "3.5"
dotenv = "0.15.0"

[lib]
name = "tauri_app"
crate-type = ["staticlib", "cdylib", "rlib"]
